<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="/storage/emulated/0"
        android:key="default_file_manager_path"
        android:title="@string/pref_default_file_manager_path_title"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />


    <ListPreference
        android:defaultValue="@string/pref_background_play_default"
        android:entries="@array/background_play_entries"
        android:entryValues="@array/background_play_values"
        android:key="background_play"
        android:summary="@string/pref_background_play_summary"
        android:title="@string/pref_background_play_title"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="remember_last_playback"
        android:summary="@string/pref_remember_last_playback_summary"
        android:title="@string/pref_remember_last_playback"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="save_position"
        android:summary="@string/pref_save_position_summary"
        android:title="@string/pref_save_position_title"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
