<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="is.xyz.mpv.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="is.xyz.mpv.SettingsActivity$VideoPreferenceFragment"
        android:title="@string/pref_header_video" />

    <header
        android:fragment="is.xyz.mpv.SettingsActivity$AudioPreferenceFragment"
        android:title="@string/pref_header_audio" />

    <header
        android:fragment="is.xyz.mpv.SettingsActivity$DeveloperPreferenceFragment"
        android:title="@string/pref_header_developer" />

    <header
        android:fragment="is.xyz.mpv.SettingsActivity$AdvancedPreferenceFragment"
        android:title="@string/pref_header_advanced" />


</preference-headers>
