<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">

    <!-- Since this dialog does not scroll, don't add too many buttons here! -->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/audioBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:text="@string/open_external_audio"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/subBtn"
            android:layout_width="0dp"
            android:layout_marginStart="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/open_external_sub"
            android:textAllCaps="false" />
    </TableRow>

    <Button
        android:id="@+id/playlistBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_playlist"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/backgroundBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resume_bg_playback"
        android:textAllCaps="false" />


    <Button
        android:id="@+id/advancedBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advanced_menu"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/orientationBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_orientation"
        android:textAllCaps="false" />

</LinearLayout>
